--- a/package.json
+++ b/package.json
@@ -27,9 +27,6 @@
     "sagas",
     "effects"
   ],
-  "peerDependencies": {
-    "redux-saga": "^0.11.1"
-  },
   "devDependencies": {
     "babel-cli": "^6.14.0",
     "babel-core": "^6.14.0",
@@ -45,6 +42,7 @@
     "redux": "^3.6.0",
     "redux-actions": "^0.12.0",
     "redux-logger": "^2.7.0",
+    "redux-saga": "^0.11.1",
     "rimraf": "^2.5.4",
     "webpack": "^2.1.0-beta.25",
     "webpack-dev-server": "^2.1.0-beta.5"
