--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "redux-saga-takex",
-  "version": "0.1.0",
+  "version": "0.0.1",
   "description": "A powerful take effect accepting RegExp instead of listing action types.",
   "main": "./lib/index.js",
   "repository": {
@@ -10,11 +10,9 @@
   "homepage": "https://github.com/kuy/redux-saga-takex",
   "bugs": "https://github.com/kuy/redux-saga-takex/issues",
   "scripts": {
-    "start": "./node_modules/.bin/webpack-dev-server --progress --color --host 0.0.0.0 --content-base example/",
     "build": "./node_modules/.bin/babel src --out-dir lib",
     "clean": "./node_modules/.bin/rimraf lib",
-    "prepublish": "npm run clean && npm run build",
-    "flow": "./node_modules/.bin/flow; test $? -eq 0 -o $? -eq 2"
+    "prepublish": "npm run clean && npm run build"
   },
   "authors": [
     "Yuki Kodama <endflow.net@gmail.com>"
@@ -25,26 +23,14 @@
     "react",
     "redux-saga",
     "sagas",
-    "effects"
+    "effects",
+    "take"
   ],
   "devDependencies": {
-    "babel-cli": "^6.14.0",
-    "babel-core": "^6.14.0",
-    "babel-loader": "^6.2.5",
-    "babel-polyfill": "^6.13.0",
-    "babel-preset-es2015": "^6.14.0",
-    "babel-preset-react": "^6.11.1",
-    "babel-preset-stage-2": "^6.13.0",
-    "flow-bin": "^0.33.0",
-    "react": "^15.3.1",
-    "react-dom": "^15.3.1",
-    "react-redux": "^4.4.5",
-    "redux": "^3.6.0",
-    "redux-actions": "^0.12.0",
-    "redux-logger": "^2.7.0",
-    "redux-saga": "^0.11.1",
-    "rimraf": "^2.5.4",
-    "webpack": "^2.1.0-beta.25",
-    "webpack-dev-server": "^2.1.0-beta.5"
+    "babel-cli": "^6.18.0",
+    "babel-core": "^6.18.2",
+    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-stage-2": "^6.18.0",
+    "rimraf": "^2.5.4"
   }
 }
